# Proki

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/app/: App.cpp  App.h
src/service/: ProcessInfo.cpp  ProcessInfo.h  ProcessService.h  ProcessServiceLinux.cpp  ProcessServiceMac.cpp  ProcessServiceWindows.cpp  ProcessUpdater.cpp  ProcessUpdater.h
src/ui/: Ui.cpp  Ui.h
src/ui/process/: ProcessUI.cpp  ProcessUI.h
